--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
+
+ul {
+  list-style: none;
+}
+
+.list {
+  padding-left: 0;
+}
+
+.logo {
+  cursor: pointer;
+}
