--- a/src/index.css
+++ b/src/index.css
@@ -65,3 +65,12 @@ tbody tr td:first-child {
   height: 20px;
   width: 20px;
 }
+
+.team-link {
+  align-items: center;
+  display: flex;
+}
+
+.team-link img {
+  padding-right: 10px;
+}
