--- a/src/components/css/Selector.css
+++ b/src/components/css/Selector.css
@@ -1,6 +1,11 @@
+.selector-scroll {
+  overflow-y: auto;
+  max-height: 500px;
+}
 .selector-container {
   display: inline-block;
   margin-top: 20px;
+  margin-right: 20px;
 }
 .selector-btn {
   background-color: #cacaca;
@@ -30,7 +35,7 @@
   border-radius: 10px;
   margin-top: 5px;
   position: absolute;
-  width: 250px;
+  width: 150px;
   z-index: 1;
 }
 .item-list {
