--- a/src/components/css/Selector.css
+++ b/src/components/css/Selector.css
@@ -4,15 +4,15 @@
 }
 .selector-container {
   display: inline-block;
-  margin-top: 20px;
   margin-right: 20px;
+  margin-top: 20px;
 }
 .selector-btn {
   background-color: #cacaca;
-  border-radius: 10px;
   border: 0;
   color: #000;
   cursor: pointer;
+  min-width: 150px;
   padding: 10px;
   transition: background-color 0.3s;
 }
@@ -22,20 +22,18 @@
   color: #ccc;
 }
 .item-selector {
-  align-items: center;
   display: flex;
   justify-content: center;
   padding-left: 5px;
 }
 .chevron-icon {
-  padding: 0 5px;
+  padding: 0 10px;
 }
 .item-dropdown {
   background-color: #cacaca;
-  border-radius: 10px;
   margin-top: 5px;
+  min-width: 150px;
   position: absolute;
-  width: 150px;
   z-index: 1;
 }
 .item-list {
@@ -51,7 +49,6 @@
   margin: 0;
   outline: 0;
   padding: 10px;
-  text-align: start;
   transition: background-color 0.15s;
   width: 100%;
 }
