--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,15 @@ tbody tr td:first-child {
   cursor: pointer;
 }
 
+.container {
+  margin: auto;
+  width: 90%;
+}
+
+.team-logo-medium {
+  height: 75px;
+  width: 75px;
+}
 .team-logo-small {
   height: 20px;
   width: 20px;
